# fcs-platform

./: .gitignore  .gitmodules  LICENSE  bootstrap.sh  build.sh  deploy.sh  kill.sh  readme.md  run.sh  shell.sh
compiler/: Dockerfile
platform/: Dockerfile
platform/src/: CMakeLists.txt  Makefile  build-platform.sh  build.sh  deploy.sh  gp9_regs.py  main.c  pi.cmake  run.sh
platform/src/gps/: CMakeLists.txt  gps.c
platform/src/maestro/: CMakeLists.txt  maestro.c  maestro.h
platform/src/platform/: CMakeLists.txt  chr_sensor.c  chr_sensor.h  maestro.c  main.c  platform.c  platform.h  servo_controller.c
src/: CMakeLists.txt  creghead.py
src/gps/: gps.c  gps.h
src/platform/: CMakeLists.txt  chr_sensor.h  main.c  platform.h
tools/: Dockerfile  pi.cmake
